--- a/index.html
+++ b/index.html
@@ -1,22 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Insert Title Here</title>
+		<title>Learning jQuery</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="Your own css here">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+
+		<link rel="stylesheet" href="styles/styles.css">
 	</head>
 	<body>
-		
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<div id="container">
+			<div id="main-content">
+				<div class="row">
+					<div class="col-xs-4 columns">
+						<div class="bg-success headers">Heading 1</div>
+						<div class="header-content">
+							<h3 class="header-content-heading">This will have a button</h3>
+							<button class="btn center-absolute">Button 1</button>
+						</div>
+					</div>
+					<div class="col-xs-4 columns">
+						<div class="bg-success headers">Heading 2</div>
+						<div class="header-content">
+							<h3 class="header-content-heading">This will have a button</h3>
+							<button class="btn center-absolute">Button 2</button>
+						</div>
+					</div>
+					<div class="col-xs-4 columns">
+						<div class="bg-success headers">Heading 3</div>
+						<div class="header-content">
+							<h3 class="header-content-heading">This will have a button</h3>
+							<button class="btn center-absolute">Button 3</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<script src="your js file goes here"></script>	
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<!-- jQuery according to node modules -->
+		<script src="node_modules/jquery/src/jquery.js"></script>
+		<script src="scripts/scripts.js"></script>	
 	</body>
 </html>
