added turn red button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 					<button class="btn panel-buttons" id="showButton">Show All</button>
 					<button class="btn panel-buttons" id="slideUpButton">Slide Up</button>
 					<button class="btn panel-buttons" id="slideDownButton">Slide Down</button>
+					<button class="btn panel-buttons" id="fadeOutButton">Fade Out</button>
+					<button class="btn panel-buttons" id="fadeInButton">Fade In</button>
+					<button class="btn panel-buttons" id="fadeToggleButton">Fade Toggle</button>
+					<button class="btn panel-buttons" id="toggleButton">Toggle</button>
+					<button class="btn panel-buttons" id="turnRedButton">Turn Red</button>
 				</div>
 				<div class="row">
 					<div class="col-xs-4 columns" id="panel1">
