added btn-info as the main button class

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 		<div id="container">
 			<div id="main-content">
 				<div id="button-panel">
-					<button class="btn panel-buttons" id="hideButton">Hide All</button>
-					<button class="btn panel-buttons" id="showButton">Show All</button>
-					<button class="btn panel-buttons" id="slideUpButton">Slide Up</button>
-					<button class="btn panel-buttons" id="slideDownButton">Slide Down</button>
-					<button class="btn panel-buttons" id="fadeOutButton">Fade Out</button>
-					<button class="btn panel-buttons" id="fadeInButton">Fade In</button>
-					<button class="btn panel-buttons" id="fadeToggleButton">Fade Toggle</button>
-					<button class="btn panel-buttons" id="toggleButton">Toggle</button>
-					<button class="btn panel-buttons" id="turnRedButton">Turn Red</button>
+					<button class="btn panel-buttons btn-info" id="hideButton">Hide All</button>
+					<button class="btn panel-buttons btn-info" id="showButton">Show All</button>
+					<button class="btn panel-buttons btn-info" id="slideUpButton">Slide Up</button>
+					<button class="btn panel-buttons btn-info" id="slideDownButton">Slide Down</button>
+					<button class="btn panel-buttons btn-info" id="fadeOutButton">Fade Out</button>
+					<button class="btn panel-buttons btn-info" id="fadeInButton">Fade In</button>
+					<button class="btn panel-buttons btn-info" id="fadeToggleButton">Fade Toggle</button>
+					<button class="btn panel-buttons btn-info" id="toggleButton">Toggle</button>
+					<button class="btn panel-buttons btn-info" id="turnRedButton">Turn Red</button>
 				</div>
 				<div class="row">
 					<div class="col-xs-4 columns" id="panel1">
