added btn classes

--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
 						<div class="bg-success headers">Heading 1</div>
 						<div class="header-content">
 							<h3 class="header-content-heading">This will have a button</h3>
-							<button class="btn center-absolute">Button 1</button>
+							<button class="btn btn-primary center-absolute" id="btn1">Button 1</button>
 						</div>
 					</div>
 					<div class="col-xs-4 columns" id="panel2">
 						<div class="bg-success headers">Heading 2</div>
 						<div class="header-content">
 							<h3 class="header-content-heading">This will have a button</h3>
-							<button class="btn center-absolute">Button 2</button>
+							<button class="btn btn-primary center-absolute" id="btn2">Button 2</button>
 						</div>
 					</div>
 					<div class="col-xs-4 columns" id="panel3">
 						<div class="bg-success headers">Heading 3</div>
 						<div class="header-content">
 							<h3 class="header-content-heading">This will have a button</h3>
-							<button class="btn center-absolute">Button 3</button>
+							<button class="btn btn-primary center-absolute" id="btn3">Button 3</button>
 						</div>
 					</div>
 				</div>
