--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
 				</div>
 				<div class="row">
 					<div class="col-xs-4 columns" id="panel1">
-						<div class="bg-success headers">Heading 1</div>
+						<div class="bg-success headers" id="header1">Panel 1</div>
 						<div class="header-content">
 							<h3 class="header-content-heading">This will have a button</h3>
-							<button class="btn btn-primary center-absolute" id="btn1">Button 1</button>
+							<button class="btn btn-primary center-absolute" id="btn1" data-panelid="panel1" data-headerid="header1">Button 1</button>
 						</div>
 					</div>
 					<div class="col-xs-4 columns" id="panel2">
-						<div class="bg-success headers">Heading 2</div>
+						<div class="bg-success headers" id="header2">Panel 2</div>
 						<div class="header-content">
 							<h3 class="header-content-heading">This will have a button</h3>
-							<button class="btn btn-primary center-absolute" id="btn2">Button 2</button>
+							<button class="btn btn-primary center-absolute" id="btn2" data-panelid="panel2" data-headerid="header2">Button 2</button>
 						</div>
 					</div>
 					<div class="col-xs-4 columns" id="panel3">
-						<div class="bg-success headers">Heading 3</div>
+						<div class="bg-success headers" id="header3">Panel 3</div>
 						<div class="header-content">
 							<h3 class="header-content-heading">This will have a button</h3>
-							<button class="btn btn-primary center-absolute" id="btn3">Button 3</button>
+							<button class="btn btn-primary center-absolute" id="btn3" data-panelid="panel3" data-headerid="header3">Button 3</button>
 						</div>
 					</div>
 				</div>
