added list items instead of plain text

--- a/panel-widget.html
+++ b/panel-widget.html
@@ -18,42 +18,42 @@
 				<div class="tab-panels">
 
 					<ul class="tabs">
-						<li class="active">panel1</li>
-						<li>panel2</li>
-						<li>panel3</li>
-						<li>panel4</li>
+						<li data-panelId="panel1" class="active">panel1</li>
+						<li data-panelId="panel2">panel2</li>
+						<li data-panelId="panel3">panel3</li>
+						<li data-panelId="panel4">panel4</li>
 					</ul>
 
 					<div id="panel1" class="panel active">
-						content1<br/>
-						content1<br/>
-						content1<br/>
-						content1<br/>
-						content1<br/>
+						<li>content1</li>
+						<li>content1</li>
+						<li>content1</li>
+						<li>content1</li>
+						<li>content1</li>
 					</div>
 
 					<div id="panel2" class="panel">
-						content2<br/>
-						content2<br/>
-						content2<br/>
-						content2<br/>
-						content2<br/>
+						<li>content2</li>
+						<li>content2</li>
+						<li>content2</li>
+						<li>content2</li>
+						<li>content2</li>
 					</div>
 
 					<div id="panel3" class="panel">
-						content3<br/>
-						content3<br/>
-						content3<br/>
-						content3<br/>
-						content3<br/>
+						<li>content3</li>
+						<li>content3</li>
+						<li>content3</li>
+						<li>content3</li>
+						<li>content3</li>
 					</div>
 
 					<div id="panel4" class="panel">
-						content4<br/>
-						content4<br/>
-						content4<br/>
-						content4<br/>
-						content4<br/>
+						<li>content4</li>
+						<li>content4</li>
+						<li>content4</li>
+						<li>content4</li>
+						<li>content4</li>
 					</div>
 
 				</div>
