add sub-header to notify pause

--- a/slider.html
+++ b/slider.html
@@ -13,7 +13,8 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1 class="text-muted">jQuery Basic Slider</h1>
+        <h1 class="text-muted">jQuery Slider - Spidey!</h1>
+        <h2 class="text-muted">Hover over slider to pause</h2>
       </div>
 
       <div id="slider">
