add relative links

--- a/ajax.html
+++ b/ajax.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="styles/slider.css">
+    <link rel="stylesheet" href="styles/ajax.css">
   </head>
   <body>
   <div id="main-content">
@@ -28,6 +28,6 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- jQuery -->
     <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="scripts/slider.js"></script>  
+    <script src="scripts/ajax.js"></script>  
   </body>
 </html>
