--- a/ajax.html
+++ b/ajax.html
@@ -11,15 +11,15 @@
     <link rel="stylesheet" href="styles/ajax.css">
   </head>
   <body>
-  <div id="main-content">
-      <h1>jQuery Ajax</h1>
-      <h2>Coffee Orders</h2>
+  <div id="main-content" class="bg-success">
+      <h1 class="headers">jQuery Ajax Example</h1>
+      <h2 class="headers">Coffee Orders</h2>
       <ul id="orders">
-        <li>Name: Yulong, Drink: Mocha</li>
-        <li>Name: Yulong, Drink: Mocha</li>
+        <li class="order-item">Name: Percy, Drink: Anything Blue</li>
+        <li class="order-item">Name: Annabeth, Drink: Hot Latte</li>
       </ul>
 
-      <h3>Add a Coffee Order</h3>
+      <h3 class="headers">Add a Coffee Order</h3>
       <p>name: <input type="text" id="name"></p>
       <p>drink: <input type="text" id="drink"></p>
       <button id="add-order">Add!</button>
