remove hard-coded data

--- a/ajax.html
+++ b/ajax.html
@@ -15,8 +15,12 @@
       <h1 class="headers">jQuery Ajax Example</h1>
       <h2 class="headers">Coffee Orders</h2>
       <ul id="orders">
+        <!-- This gets filled in with jQuery
+
         <li class="order-item">Name: Percy, Drink: Anything Blue</li>
-        <li class="order-item">Name: Annabeth, Drink: Hot Latte</li>
+        <li class="order-item">Name: Annabeth, Drink: Hot Latte</li> 
+
+        -->
       </ul>
 
       <h3 class="headers">Add a Coffee Order</h3>
