--- a/ajax.html
+++ b/ajax.html
@@ -32,6 +32,7 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- jQuery -->
     <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/mustache/mustache.js"></script>
     <script src="scripts/ajax.js"></script>  
   </body>
 </html>
